--- a/src/comps/Profile/Profile.module.css
+++ b/src/comps/Profile/Profile.module.css
@@ -3,6 +3,16 @@
   background-color: rgb(235, 242, 247);
   width: 299px;
   margin: 10px auto;
+  cursor: pointer;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.profile:hover,
+.profile:focus {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 1), -23px 0 20px -23px rgba(0, 0, 0, 0.8),
+    23px 0 20px -23px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
 .description {
